[package]
name = "imaged"
version = "0.1.0"
description = "Image processing server"
authors = ["Ryan Fowler <ryan.fowler19@gmail.com>"]
repository = "https://github.com/ryanfowler/imaged"
license = "MIT"
edition = "2024"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.100"
axum = { version = "0.8.5", features = ["query"] }
base64 = "0.22.1"
blake3 = "1.8.2"
byte-unit = { version = "5.1.6", features = ["byte", "serde"] }
bytes = "1.10.1"
envy = "0.4.2"
hex = "0.4.3"
hmac = "0.12.1"
image = { version = "0.25.8", default-features = false, features = ["avif", "png", "tiff"] }
kamadak-exif = "0.6.1"
libavif-image = { version = "0.14.0", default-features = false, features = ["codec-dav1d"] }
lru = "0.16.1"
memchr = "2.7.6"
mimalloc = { version = "0.1.48" }
rand = "0.9.2"
reqwest = "0.12.23"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
thumbhash = "0.1.0"
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "signal", "sync", "time"] }
turbojpeg = { version = "1.3.3" }
walkdir = "2.5.0"
webp = "0.3.1"
