[package]
name = "imaged"
version = "0.1.0"
description = "Image processing server"
authors = ["Ryan Fowler <ryan.fowler19@gmail.com>"]
repository = "https://github.com/ryanfowler/imaged"
license = "MIT"
edition = "2024"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["query"] }
base64 = "0.22.1"
bytes = "1.12.0"
envy = "0.4.2"
fast_image_resize = { version = "6.0.0", features = ["image"] }
hex = "0.4.3"
hmac = "0.13.0"
image = { version = "0.25.10", default-features = false, features = ["avif", "avif-native", "jpeg", "png", "tiff", "webp"] }
kamadak-exif = "0.6.1"
memchr = "2.8.2"
mimalloc = { version = "0.1.52" }
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
sha2 = "0.11.0"
thumbhash = "0.1.0"
tokio = { version = "1.52.3", features = ["macros", "net", "rt", "signal", "sync", "time"] }
turbojpeg = { version = "1.4.0" }
webpx = { version = "0.4.0", default-features = false, features = ["encode", "std"] }
